# Ray

./: .gitignore  CMakeLists.txt  Macro_function.cpp  Macro_function.h  Makefile  gpt_script.py  play_audio_DXL.cpp  push_to_talk_app.py  requirements_rag.txt  spec_draft.md  start.sh  stt_script.py  tts_script.py
assets/: songs_db.json
assets/headMotion/: empty_10min.csv  가까운 듯 먼 그대여.csv
assets/mouthMotion/: 가까운 듯 먼 그대여-delta-big.csv
config/: prompts.py  ray_conversation.json
cpp/: Config.h  DynamixelDriver.cpp  DynamixelDriver.h  Macro_function.cpp  Macro_function.h  MotionLogger.cpp  MotionLogger.h  config.toml  main.cpp
data/: empty_10min.csv  movies_rag.json  sample_movies.json
data/chroma_db/: chroma.sqlite3
data/segments/: segment_0.npy  segment_1.npy  segment_2.npy  segment_3.npy
include/: Macro_function.h
python/: api_pipeline.py  audio_processor.py  config.py  conversation_manager.py  convert_movie_data.py  gpt_server.py  led.py  main.py  offline_motion.py  prompts.py  state_manager.py  test_chat.py  test_rag_chat.py
python/audio/: __init__.py  microphone.py  smart_turn.py  stt.py  vad.py
python/conversation_test/: format_for_ppt.py  test_conversation_log.py  test_scenarios.py
python/crawler/: cine21_crawler.py  convert_cine21_to_rag.py  fetch_tmdb_movies.py  test_tmdb_search.py
python/engine/: __init__.py  conversation_engine.py  session.py  states.py
python/hardware/: __init__.py  led.py  led_animations.py
python/llm/: __init__.py  manager.py  prompts.py  tools.py
python/offline/: offline_motion.py
python/process_openface_headmotion_data/: headmotion_1.csv  headmotion_1_rpy_only.csv
python/protocol/: __init__.py  ws_messages.py
python/rag/: __init__.py  convert_movie_data.py  diagnose_rag.py  loader.py  retriever.py  test_search_ui.py
python/scripts/process_openface_headmotion_data/: headmotion_1.csv  idle_motion_smoothing.py
python/tests/conversation_test/: README.md  test_conversation_log.py
python/tools/: __init__.py  music.py  offline_motion.py
python/tts/: __init__.py  file_utils.py  manager.py
src/: main.cpp
